# Official-ghostC-OS

./: README.md
kernel/: build-os.sh  cmdline.txt  config.txt  install-deps.sh  prepare-sd.sh
kernel/include/: GhostTerminal.hpp  RuneMonitor.hpp  ghost_terminal.h  ghost_vga.h  ghostc.h  system.h
kernel/src/: ghost_hdmi.c  ghost_terminal.c  ghostc.c  kernel.c
rune-lang/: CMakeLists.txt
rune-lang/src/: GhostTerminal.cpp  RuneMonitor.cpp  ghost_terminal_main.cpp
rune-lang/tests/: rune_test.cpp
